[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/InvisibleBall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UpperWall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/LowerWall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/InvisiblePaddle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/InvisibleGame.gd" type="Script" id=6]
[ext_resource path="res://Scenes/PlayerScore.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/EnemyScore.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=9]
[ext_resource path="res://music/officialGameMusic/InvisibleBossSong.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Boss Background.tscn" type="PackedScene" id=11]

[node name="InvisibleGame" type="Node"]
script = ExtResource( 6 )

[node name="Boss Background" parent="." instance=ExtResource( 11 )]

[node name="Paddle" parent="." instance=ExtResource( 2 )]

[node name="InvisibleBall" parent="." instance=ExtResource( 1 )]

[node name="UpperWall" parent="." instance=ExtResource( 3 )]

[node name="LowerWall" parent="." instance=ExtResource( 4 )]

[node name="InvisiblePaddle" parent="." instance=ExtResource( 5 )]

[node name="PlayerScore" parent="." instance=ExtResource( 7 )]

[node name="EnemyScore" parent="." instance=ExtResource( 8 )]

[node name="Pause" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
